@@ -1,4 +1,5 @@
 5.0.7~beta4 (2015-02-24)
+FIX: possible crash on not well formed language ids
 
 5.0.7~beta3 (2015-02-22)
 UPD: French (thx 2 Trilip)
